# verticalslice-smt-service

./: .coverage  .coverage.Alexanders-MacBook-Pro.local.34328.XLYKIAcx  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_SWE_SETUP_VALIDATION.md  AI_SWE_article.md  CHANGES.md  CLAUDE.md  DELIVERY_REPORT.md  DEPLOYMENT.md  DIAGNOSTIC_ANALYSIS.md  DIAGNOSTIC_ANALYSIS_504_TIMEOUT.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  FILE_INDEX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_NOTES.md  README.md  README_SERVICE.md  SWAGGER_ENHANCEMENT_SUMMARY.md  TEMPLATE_STRATEGY.md  TO-DOS.md  app.yaml  docker-compose.dev.yml  docker-compose.yml  openapi.json  pyproject.toml  quickstart.sh  requirements.txt  sqliteInt.h  sqlite_printf_acsl.c  test-performance.sh  test_formalization_cache.py  test_imports.py  verify_openapi.py
.github/: CI_CD_SUMMARY.md
.github/scripts/: health-check.sh  integration-tests.sh  smoke-tests.sh
.github/workflows/: deploy.yml
.memory_bank/: README.md  product_brief.md  tech_stack.md
docs/: API_QUICK_REFERENCE.md  DEPLOYMENT.md  README.md  SWAGGER_ENHANCEMENTS.md  cache-safety-verification.md  configuration-analysis.md  digitalocean-requirements.md  pipeline-diagram.mmd
docs/architecture/: ARCHITECTURE.md
docs/specs/: PIPELINE-DESIGN.md
examples/: sample_texts.py
hooks/: post_gen_project.py  pre_gen_project.py
investigations/: smt-validation-error-root-cause.md  v1.14.2-deployment-data.json  v1.14.2-deployment-timing.md
prompts/: 001-debug-docker-deployment.md  001-digitalocean-docker-deployment.md  001-fix-smt-extraction-ground-truth-vs-claims.md  001-investigate-deployment-timing.md  001-replace-z3-with-cvc5.md  003-infrastructure-api-tests.md  003-research-smt-validation-error.md
prompts/completed/: 001-add-web-search-enrichment.md  001-design-smt-pipeline-architecture.md  001-improve-test-coverage-to-85-percent-20251124-221439.md  (+13 more)
scripts/: export-openapi.sh
src/: main.py
templates/: README.md
tests/: conftest.py  test_enrichment.py
(+65 files in other folders)
